grammar.js
    source_file: ($) =>
      seq(repeat($._statement_delimeter), repeat($._statement)),

    _statement: ($) => seq($.statement, repeat1($._statement_delimeter)),

    _statement_delimeter: ($) =>
      choice(";", $._newline, alias($._newline_and_comment, $.comment)),

    _module_structure: ($) =>
      seq($._module_definition, optional($.module_type_annotation)),

    type_declaration: ($) =>
      seq(
        optional("export"),
        "type",
        optional("rec"),
        sep1(seq(repeat($._newline), "and"), $.type_binding),
      ),

    type_binding: ($) =>
      seq(
        field("name", choice($.type_identifier, $.type_identifier_path)),
        optional($.type_parameters),
        optional(
          seq(
            optional(seq("=", $._non_function_inline_type)),
            optional(
              seq(
                choice("=", "+="),
                optional("private"),
                field("body", $._type),
              ),
            ),
            repeat($.type_constraint),
          ),
        ),
      ),

    type_parameters: ($) =>
      seq(
        "<",
        commaSep1t(seq(optional(choice("+", "-")), $.type_identifier)),
        ">",
      ),

    type_annotation: ($) => seq(":", $._inline_type),

    _type: ($) =>
      choice($._inline_type, $.variant_type, $.record_type, $.as_aliasing_type),

    _inline_type: ($) => choice($._non_function_inline_type, $.function_type),

    _non_function_inline_type: ($) =>
      choice(
        $._type_identifier,
        $.tuple_type,
        $.polyvar_type,
        $.object_type,
        $.generic_type,
        $.unit_type,
        $.module_pack,
        $.unit,
        $.polymorphic_type,
        alias($._as_aliasing_non_function_inline_type, $.as_aliasing_type),
      ),

    polymorphic_type: ($) =>
      seq(
        choice(repeat1($.type_identifier), $.abstract_type),
        ".",
        $._inline_type,
      ),

    type_constraint: ($) => seq("constraint", $._type, "=", $._type),

    tuple_type: ($) => prec.dynamic(-1, seq("(", commaSep1t($._type), ")")),

    variant_type: ($) =>
      prec.left(seq(optional("|"), barSep1($.variant_declaration))),

    variant_declaration: ($) =>
      prec.right(
        seq(
          $.variant_identifier,
          optional($.variant_parameters),
          optional($.type_annotation),
        ),
      ),

    variant_parameters: ($) => seq("(", commaSep1t($._type), ")"),

    polyvar_type: ($) =>
      prec.left(
        seq(
          choice("[", "[>", "[<"),
          optional("|"),
          barSep1($.polyvar_declaration),
          "]",
        ),
      ),

    polyvar_declaration: ($) =>
      prec.right(
        choice(
          seq($.polyvar_identifier, optional($.polyvar_parameters)),
          $._inline_type,
        ),
      ),

    polyvar_parameters: ($) => seq("(", commaSep1t($._type), ")"),

    record_type: ($) => seq("{", commaSept($._record_type_member), "}"),

    record_type_field: ($) =>
      seq(
        optional("mutable"),
        alias($.value_identifier, $.property_identifier),
        optional("?"),
        $.type_annotation,
      ),

    type_spread: ($) =>
      seq(
        "...",
        choice($.type_identifier, $.generic_type, $.type_identifier_path),
      ),

    _record_type_member: ($) => choice($.record_type_field, $.type_spread),

    object_type: ($) =>
      prec.left(
        seq(
          "{",
          choice(
            commaSep1t($._object_type_member),
            seq(".", commaSept($._object_type_member)),
            seq("..", commaSept($._object_type_member)),
          ),
          "}",
        ),
      ),

    _object_type_member: ($) =>
      choice(alias($.object_type_field, $.field), $.type_spread),

    generic_type: ($) => prec.left(seq($._type_identifier, $.type_arguments)),

    type_arguments: ($) => seq("<", commaSep1t($._type), ">"),

    function_type: ($) =>
      prec.left(seq($.function_type_parameters, "=>", $._type)),

    function_type_parameters: ($) =>
      choice($._non_function_inline_type, $._function_type_parameter_list),

    _function_type_parameter_list: ($) =>
      seq("(", commaSept(alias($.function_type_parameter, $.parameter)), ")"),

    let_declaration: ($) =>
      seq(
        choice("export", "let"),
        optional("rec"),
        sep1(seq(repeat($._newline), "and"), $.let_binding),
      ),

    let_binding: ($) =>
      seq(
        field("pattern", $._pattern),
        choice(
          seq(
            $.type_annotation,
            optional(seq("=", field("body", $.expression))),
          ),
          seq("=", field("body", $.expression)),
        ),
      ),

    function: ($) =>
      prec.left(
        seq(
          optional("async"),
          choice(
            field("parameter", $.value_identifier),
            $._definition_signature,
          ),
          "=>",
          field("body", $.expression),
        ),
      ),

    as_aliasing_type: ($) => seq($._type, "as", $.type_identifier),

    module_pack: ($) =>
      seq(
        "module",
        parenthesize(choice($._module_structure, $.type_identifier_path)),
      ),

    _definition_signature: ($) =>
      seq(
        field("parameters", $.formal_parameters),
        optional(
          field(
            "return_type",
            alias($._return_type_annotation, $.type_annotation),
          ),
        ),
      ),

    parameter: ($) =>
      seq(
        optional($.uncurry),
        choice(
          seq($._pattern, optional($.type_annotation)),
          $.labeled_parameter,
          $.unit,
          $.abstract_type,
        ),
      ),

    labeled_parameter: ($) =>
      seq(
        "~",
        $.value_identifier,
        optional($.as_aliasing),
        optional($.type_annotation),
        optional(field("default_value", $._labeled_parameter_default_value)),
      ),

    abstract_type: ($) => seq("type", repeat1($.type_identifier)),

    _labeled_parameter_default_value: ($) =>
      seq("=", choice("?", $.expression)),

    // This negative dynamic precedence ensures that during error recovery,
    // unfinished constructs are generally treated as literal expressions,
    // not patterns.
    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            $.value_identifier,
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    _type_identifier: ($) =>
      choice($.type_identifier, $.type_identifier_path, ".."),

    type_identifier_path: ($) =>
      seq($.module_primary_expression, ".", $.type_identifier),

    module_identifier_path: ($) =>
      path($.module_primary_expression, $.module_identifier),

    variant_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    polyvar_identifier: ($) =>
      seq(
        "#",
        choice(
          /[a-zA-Z0-9_']+/,
          seq(optional("\\"), alias($.string, $.polyvar_string)),
        ),
      ),

    type_identifier: ($) =>
      choice(/[a-z_'][a-zA-Z0-9_']*/, $._escape_identifier),

    value_identifier: ($) =>
      choice(
        /[a-z_][a-zA-Z0-9_']*/,
        $._reserved_identifier,
        $._escape_identifier,
      ),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    module_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    unit: ($) => seq("(", ")"),
    unit_type: ($) => "unit",

    uncurry: ($) => ".",

    _reserved_identifier: ($) => choice("async", "unpack"),
  },
});

function barSep1(rule) {
  return seq(rule, repeat(seq("|", rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep2(rule) {
  return seq(rule, ",", commaSep1(rule));
}

function commaSep1t(rule) {
  return seq(commaSep1(rule), optional(","));
}

function commaSep2t(rule) {
  return seq(commaSep2(rule), optional(","));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSept(rule) {
  return optional(commaSep1t(rule));
}

function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}

function path(prefix, final) {
  return choice(final, seq(prefix, ".", final));
}

function parenthesize(rule) {
  return seq("(", rule, ")");
}
